[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "SmithLabCodes"
version = "0.1.0dev1"
description = ""
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Brandon C. Tapia", email = "bctapia@mit.edu" } #,
#  { name = "TBA" },
#  { name = "TBA" },
#  { name = "TBA" }
]

dependencies = [
  "numpy",
  "matplotlib"]

keywords = ["helpers"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics"]

[project.optional-dependencies]
dev = ["pytest", "black", "build", "twine"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["smithlab*"]
exclude = ["Scripts*", "deprecation*"]

[tool.black]
target-version = ["py312"]
line-length = 100
skip-magic-trailing-comma = true
exclude = '''
/(
    examples
)/
'''